fix: update package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start:heroku":"node dist/server",
     "postinstall":"npm run build:ssr",
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "npm run serve:ssr",
+    "build": "npm run build:ssr",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run MabowShare:serve-ssr",
