--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-server": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@nguniversal/express-engine": "^13.0.1",
+    "@ntegral/ngx-universal-window": "^1.0.2",
     "express": "^4.15.2",
+    "mock-browser": "^0.92.14",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,7 +38,7 @@
     "@nguniversal/builders": "^13.0.1",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.47",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
